crates/near-kit-macros/tests/compile-fail/unknown_format.stderr
error: unknown format 'xml', expected 'json' or 'borsh'
 --> tests/compile-fail/unknown_format.rs:5:22
  |
5 | #[near_kit::contract(xml)]
  |                      ^^^

warning: unused import: `near_kit::*`
 --> tests/compile-fail/unknown_format.rs:3:5
  |
3 | use near_kit::*;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
